--- a/app/views/cliente/formulario_mensal_scm.html.erb
+++ b/app/views/cliente/formulario_mensal_scm.html.erb
@@ -59,7 +59,43 @@
                         </div>
                         <div class="col-md-6">
                             <label for="tipoTecnologia" class="form-label">Tipo de Tecnologia</label>
-                            <input type="text" class="form-control" id="tipoTecnologia" placeholder="Digite o tipo de tecnologia">
+                            <select id="uf" class="form-select">
+                                <option selected>Escolher...</option>
+                                <option value="adsl">ADSL</option>
+                                <option value="adsl2">ADSL2</option>
+                                <option value="AMPS">AMPS</option>
+                                <option value="ATM	">ATM	</option>
+                                <option value="Cable Modem">Cable Modem</option>
+                                <option value="CDMA IS 95	">CDMA IS 95	</option>
+                                <option value="CDMA2000">CDMA2000</option>
+                                <option value="DTH">DTH</option>
+                                <option value="EDGE">EDGE</option>
+                                <option value="ETHERNET">ETHERNET</option>
+                                <option value="FR">FR</option>
+                                <option value="FTTB">FTTB</option>
+                                <option value="FTTH">FTTH</option>
+                                <option value="GPRS">GPRS</option>
+                                <option value="GSM">GSM</option>
+                                <option value="HDSL">HDSL</option>
+                                <option value="HFC">HFC</option>
+                                <option value="HSDPA">HSDPA</option>
+                                <option value="HSPA+	">HSPA+	</option>
+                                <option value="HSPAP">HSPAP</option>
+                                <option value="HSUPA">HSUPA</option>
+                                <option value="LTE	">LTE</option>
+                                <option value="NR NSA	">NR NSA	</option>
+                                <option value="NR SA	">NR SA	</option>
+                                <option value="OFDMA/TDD	">OFDMA/TDD	</option>
+                                <option value="Acesso livre via satélite">Acesso livre via satélite</option>
+                                <option value="SDH">SDH</option>
+                                <option value="SONET">SONET</option>
+                                <option value="VDSL">VDSL</option>
+                                <option value="VSAT">VSAT</option>
+                                <option value="WCDMA">WCDMA</option>
+                                <option value="Wi-Fi	">Wi-Fi	</option>
+                                <option value="WIMAX">WIMAX</option>
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
                         </div>
                     </div>
 
