--- a/app/views/cliente/formulario_semestral.html.erb
+++ b/app/views/cliente/formulario_semestral.html.erb
@@ -56,7 +56,12 @@
                         </div>
                         <div class="col-md-6">
                             <label for="tipoServico" class="form-label">Tipo de Serviço</label>
-                            <input type="text" class="form-control" id="tipoAtendimento" placeholder="Tipo de Serviço">
+                            <select id="uf" class="form-select">
+                                <option selected>Escolher...</option>
+                                <option value="SP">SeAC</option>
+                                <option value="RJ">SCM</option>
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
                         </div>
                     </div>
 
