--- a/app/views/cliente/formulario_mensal_scm.html.erb
+++ b/app/views/cliente/formulario_mensal_scm.html.erb
@@ -10,9 +10,34 @@
                         <div class="col-md-6">
                             <label for="uf" class="form-label">UF</label>
                             <select id="uf" class="form-select">
-                                <option selected>Escolher...</option>
-                                <option value="SP">São Paulo</option>
-                                <option value="RJ">Rio de Janeiro</option>
+                                 <option selected>Escolher...</option>
+                                <option value="SP">AC</option>
+                                <option value="RJ">AL</option>
+                                <option value="RJ">AP</option>
+                                <option value="RJ">AM</option>
+                                <option value="RJ">BA</option>
+                                <option value="RJ">CE</option>
+                                <option value="RJ">DF</option>
+                                <option value="RJ">ES</option>
+                                <option value="RJ">GO</option>
+                                <option value="RJ">MA</option>
+                                <option value="RJ">MT</option>
+                                <option value="RJ">MS</option>
+                                <option value="RJ">MG</option>
+                                <option value="RJ">PA</option>
+                                <option value="RJ">PB </option>
+                                <option value="RJ">PR</option>
+                                <option value="RJ">PE</option>
+                                <option value="RJ">PI</option>
+                                <option value="RJ">RJ</option>
+                                <option value="RJ">RN</option>
+                                <option value="RJ">RS</option>
+                                <option value="RJ">RO</option>
+                                <option value="RJ">RR</option>
+                                <option value="RJ">SC</option>
+                                <option value="RJ">SP</option>
+                                <option value="RJ">SE</option>
+                                <option value="RJ">TO</option>
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
                         </div>
