--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -60,8 +60,41 @@
         </div>
     </div>
 
+
+
+
+
+
+
+
 <div class="container mt-5">
      <div class="box-title">COLETAS <BR/></div>
+        <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="custom-box">
+                    <div class="box-title">SCM</div>
+                    <div class="box-description">Serviços de comunicação Multimídia</div>
+                    <a href="http://201.76.43.189:88/cliente/mensal_scm" class="box-link">Criar coleta</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="custom-box">
+                    <div class="box-title">SEAC</div>
+                    <div class="box-description">Serviço de tv por assinatura</div>
+                    <a href="http://201.76.43.189:88/cliente/mensal_seac" class="box-link">Criarr coleta</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="custom-box">
+                    <div class="box-title">STFC</div>
+                    <div class="box-description">Serviço Telefônico Fixo Comutado</div>
+                    <a href="http://201.76.43.189:88/cliente/mensal_stfc" class="box-link">Criar coleta</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
         <table class="table table-custom">
             <thead class="thead-light">
                 <tr>
