--- a/app/views/cliente/cliente_analista.html.erb
+++ b/app/views/cliente/cliente_analista.html.erb
@@ -73,27 +73,27 @@
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">SCM</div>
+                    <div class="box-title">MENSAL</div>
                     <div class="box-description">Serviços de comunicação Multimídia</div>
-                    <a href="http://201.76.43.189:88/cliente/mensal_scm" class="box-link">Criar coleta</a>
+                    <a href="http://201.76.43.189:88/coleta/mensal/criar" class="box-link">Criar coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">SEAC</div>
+                    <div class="box-title">SEMESTRAL</div>
                     <div class="box-description">Serviço de tv por assinatura</div>
-                    <a href="http://201.76.43.189:88/cliente/mensal_seac" class="box-link">Criarr coleta</a>
+                    <a href="http://201.76.43.189:88/coleta/semestral/criar" class="box-link">Criarr coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">STFC</div>
+                    <div class="box-title">ANUAL</div>
                     <div class="box-description">Serviço Telefônico Fixo Comutado</div>
-                    <a href="http://201.76.43.189:88/cliente/mensal_stfc" class="box-link">Criar coleta</a>
+                    <a href="http://201.76.43.189:88//coleta/anual/criar" class="box-link">Criar coleta</a>
                 </div>
             </div>
         </div>
-    </div>
+    </div><br/>
 
         <table class="table table-custom">
             <thead class="thead-light">
