--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -3,23 +3,77 @@
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">MENSAL</div>
-                    <div class="box-description">Coleta de dados de acessos:<br/>SCM, SEAC, STFC</div>
-                    <a href="#" class="box-link">Fazer coletas</a>
+                    <div class="box-title">SCM</div>
+                    <div class="box-description">Coleta de dados de acessos:<br/>SCM, SEAC, STFC 
+                     <select id="uf" class="form-select">
+                                <option selected>Mês da coleta</option>
+                                <option value="SP">Janeiro</option>
+                                <option value="RJ">Fevereiro</option>
+                                <option value="RJ">Março</option>
+                                <option value="RJ">Abril</option>
+                                <option value="RJ">Maio</option>
+                                <option value="RJ">Junho</option>
+                                <option value="RJ">Julho</option>
+                                <option value="RJ">Agosto</option>
+                                <option value="RJ">Setembro</option>
+                                <option value="RJ">Outubro</option>
+                                <option value="RJ">Novembro</option>
+                                <option value="RJ">Dezembro</option>
+                              
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
+                    </div>
+                    <a href="#" class="box-link">Criar coletas</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">SEMESTRAL</div>
-                    <div class="box-description">Coleta de dados Econômicos-financeiros e Técnico-operacionais</div>
-                    <a href="#" class="box-link">Fazer coletas</a>
+                    <div class="box-title">TVpA</div>
+                    <div class="box-description">Coleta de dados Econômicos-financeiros e Técnico-operacionais
+                     <select id="uf" class="form-select">
+                                <option selected>Mês da coleta</option>
+                                <option value="SP">Janeiro</option>
+                                <option value="RJ">Fevereiro</option>
+                                <option value="RJ">Março</option>
+                                <option value="RJ">Abril</option>
+                                <option value="RJ">Maio</option>
+                                <option value="RJ">Junho</option>
+                                <option value="RJ">Julho</option>
+                                <option value="RJ">Agosto</option>
+                                <option value="RJ">Setembro</option>
+                                <option value="RJ">Outubro</option>
+                                <option value="RJ">Novembro</option>
+                                <option value="RJ">Dezembro</option>
+                              
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
+                    </div>
+                    <a href="#" class="box-link">Criar coletas</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
-                    <div class="box-title">ANUAL</div>
-                    <div class="box-description">Coleta de dados de Infraestrutura de Transporte<br/><br/></div>
-                    <a href="#" class="box-link">Fazer coletas</a>
+                    <div class="box-title">STFC</div>
+                    <div class="box-description">Coleta de dados de Infraestrutura de Transporte
+                    <select id="uf" class="form-select">
+                                <option selected>Mês da coleta</option>
+                                <option value="SP">Janeiro</option>
+                                <option value="RJ">Fevereiro</option>
+                                <option value="RJ">Março</option>
+                                <option value="RJ">Abril</option>
+                                <option value="RJ">Maio</option>
+                                <option value="RJ">Junho</option>
+                                <option value="RJ">Julho</option>
+                                <option value="RJ">Agosto</option>
+                                <option value="RJ">Setembro</option>
+                                <option value="RJ">Outubro</option>
+                                <option value="RJ">Novembro</option>
+                                <option value="RJ">Dezembro</option>
+                              
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
+                    </div>
+                    <a href="#" class="box-link">Criar coletas</a>
                 </div>
             </div>
         </div>
