--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -23,7 +23,8 @@
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
                     </div>
-                    <a href="#" class="box-link">Criar coletas</a>
+                    <button type="button" class="btn btn-dark"><a href="#" class="box-link">Criar coletas</a></button>
+                    
                 </div>
             </div>
             <div class="col-md-4">
