--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -22,8 +22,8 @@
                               
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
-                    </div>
-                    <button type="button" class="btn btn-dark"><a href="#" class="box-link">Criar coletas</a></button>
+                    </div><br/>
+                    <a href="#" class="box-link"><button type="button" class="btn btn-dark">Criar coletas</button></a>
                     
                 </div>
             </div>
