--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -22,7 +22,7 @@
                               
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
-                    </div><br/>
+                    </div>
                     <a href="#" class="box-link"><button type="button" class="btn btn-dark">Criar coletas</button></a>
                     
                 </div>
