--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -23,7 +23,13 @@
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
                     </div>
-                    <a href="#" class="box-link"><button type="button" class="btn btn-dark">Criar coletas</button></a>
+
+                     <div class="d-grid gap-2 col-6 mx-auto">
+                        <a href="#" class="box-link"><button class="btn btn-dark" type="button">Criar coleta</button></a>
+                        
+                      </div>
+                    
+                   
                     
                 </div>
             </div>
@@ -49,7 +55,10 @@
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
                     </div>
-                    <a href="#" class="box-link">Criar coletas</a>
+                     <div class="d-grid gap-2 col-6 mx-auto">
+                        <a href="#" class="box-link"><button class="btn btn-dark" type="button">Criar coleta</button></a>
+                        
+                      </div>
                 </div>
             </div>
             <div class="col-md-4">
@@ -74,7 +83,10 @@
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
                     </div>
-                    <a href="#" class="box-link">Criar coletas</a>
+                     <div class="d-grid gap-2 col-6 mx-auto">
+                        <a href="#" class="box-link"><button class="btn btn-dark" type="button">Criar coleta</button></a>
+                        
+                      </div>
                 </div>
             </div>
         </div>
