--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -24,11 +24,7 @@
                             </select>
                     </div>
 
-                     <div class="d-grid gap-2 col-6 mx-auto">
-                        <a href="#" class="box-link"><button class="btn btn-dark" type="button">Criar coleta</button></a>
-                        
-                      </div>
-                    
+                     <a href="#" class="box-link">Criar coletas</a>
                    
                     
                 </div>
@@ -55,10 +51,7 @@
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
                     </div>
-                     <div class="d-grid gap-2 col-6 mx-auto">
-                        <a href="#" class="box-link"><button class="btn btn-dark" type="button">Criar coleta</button></a>
-                        
-                      </div>
+                     <a href="#" class="box-link">Criar coletas</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -83,10 +76,7 @@
                                 <!-- Adicione mais opções conforme necessário -->
                             </select>
                     </div>
-                     <div class="d-grid gap-2 col-6 mx-auto">
-                        <a href="#" class="box-link"><button class="btn btn-dark" type="button">Criar coleta</button></a>
-                        
-                      </div>
+                     <a href="#" class="box-link">Criar coletas</a>
                 </div>
             </div>
         </div>
