--- a/app/views/coleta_semestral/criar.html.erb
+++ b/app/views/coleta_semestral/criar.html.erb
@@ -1,6 +1,7 @@
  <div class="container">
     
         <div class="row justify-content-center">
+          <h2><b>Criar Coleta Semestral</b></h2>
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">SCM</div>
