--- a/app/views/coleta_semestral/fazer_scm.html.erb
+++ b/app/views/coleta_semestral/fazer_scm.html.erb
@@ -1,4 +1,121 @@
- <div class="container mt-5">
+<div class="container">
+ 
+  <div class="row">
+    <div class="col-8">
+
+    <div class="card-body">
+                <form>
+                    <div class="row mb-3">
+                      <div class="col-md-6">
+                            <label for="codigoIbge" class="form-label">CNPJ da Prestadora</label>
+                            <input type="text" class="form-control" id="codigoIbge" placeholder="Digite o Cnpj da Prestadora">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="codigoIbge" class="form-label">Ano</label>
+                            <input type="text" class="form-control" id="codigoIbge" placeholder="Digite o Ano">
+                        </div>
+                     </div>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="uf" class="form-label">Trimestre</label>
+                            <select id="uf" class="form-select">
+                                 <option selected>Escolher...</option>
+                                <option value="SP">1</option>
+                                <option value="RJ">2</option>
+                                <option value="RJ">3</option>
+                                <option value="RJ">4</option>
+                                
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="uf" class="form-label">UF</label>
+                            <select id="uf" class="form-select">
+                                 <option selected>Escolher...</option>
+                                <option value="SP">AC</option>
+                                <option value="RJ">AL</option>
+                                <option value="RJ">AP</option>
+                                <option value="RJ">AM</option>
+                                <option value="RJ">BA</option>
+                                <option value="RJ">CE</option>
+                                <option value="RJ">DF</option>
+                                <option value="RJ">ES</option>
+                                <option value="RJ">GO</option>
+                                <option value="RJ">MA</option>
+                                <option value="RJ">MT</option>
+                                <option value="RJ">MS</option>
+                                <option value="RJ">MG</option>
+                                <option value="RJ">PA</option>
+                                <option value="RJ">PB </option>
+                                <option value="RJ">PR</option>
+                                <option value="RJ">PE</option>
+                                <option value="RJ">PI</option>
+                                <option value="RJ">RJ</option>
+                                <option value="RJ">RN</option>
+                                <option value="RJ">RS</option>
+                                <option value="RJ">RO</option>
+                                <option value="RJ">RR</option>
+                                <option value="RJ">SC</option>
+                                <option value="RJ">SP</option>
+                                <option value="RJ">SE</option>
+                                <option value="RJ">TO</option>
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="tipoCliente" class="form-label">Dado Informado</label>
+                            <select id="uf" class="form-select">
+                                <option selected>Escolher...</option>
+                                <option value="SP">Receita_Operacional_Líquida_ROL</option>
+                                <option value="RJ">Capital_Expenditure_CAPEX</option>
+                                <option value="RJ">Tráfego_Dados_Total_MB, Tráfego_Voz_Minutos</option>
+                                <!-- Adicione mais opções conforme necessário -->
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="codigoIbge" class="form-label">Valor</label>
+                            <input type="text" class="form-control" id="codigoIbge" placeholder="Digite o Valor">
+                        </div>
+                    </div>
+
+                   
+
+                    <div class="text-end">
+                        <button type="submit" class="btn btn-primary">Adicionar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
+
+
+
+</div>
+    <div class="col-4">col-4</div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container mt-5">
 
 <h3><strong>Dados de Acesso - SCM</strong></h3>
 
