--- a/app/views/coleta_semestral/fazer_scm.html.erb
+++ b/app/views/coleta_semestral/fazer_scm.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
  
   <div class="row">
+<div class="col-4">menu</div>
+  </div>
     <div class="col-8">
 
     <div class="card-body">
@@ -95,8 +97,7 @@
 
 
 </div>
-    <div class="col-4">col-4</div>
-  </div>
+    
 </div>
 
 
