--- a/app/views/coleta_semestral/fazer_scm.html.erb
+++ b/app/views/coleta_semestral/fazer_scm.html.erb
@@ -1,3 +1,12 @@
+<div class="container mt-5">
+
+<h3><strong>Dados de Acesso - SCM</strong></h3>
+
+
+
+
+
+
 <div class="container">
  
   <div class="row">
