--- a/app/views/coleta_semestral/fazer_scm.html.erb
+++ b/app/views/coleta_semestral/fazer_scm.html.erb
@@ -1,10 +1,10 @@
 <div class="container mt-5">
 
-<h3><strong>Dados de Acesso - SCM</strong></h3>
+<h3><strong>Dados de Acesso - SEAC</strong></h3>
 
-    <div class="col-8">
-
-    <div class="card-body">
+       
+       
+            <div class="card-body">
                 <form>
                     <div class="row mb-3">
                       <div class="col-md-6">
@@ -90,28 +90,4 @@
                 </form>
             </div>
         </div>
-
-
-
-
-
-</div>
-    
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </div>
