--- a/app/views/analista/index_analista.html.erb
+++ b/app/views/analista/index_analista.html.erb
@@ -2,6 +2,7 @@
 
 <h2><b>Lista de Clientes do Analista</b></h2>
 
+ <div class="row justify-content-center">
 <div class="col-md-4">
   
   <% for project in @projects %>
@@ -17,6 +18,7 @@
      <% end %>
   <% end %>
  </div>
+</div>
 <% else %>
 <h2><b>Usuário não está conectado</b></h2>
 <% end %>
