--- a/app/views/analista/index_analista.html.erb
+++ b/app/views/analista/index_analista.html.erb
@@ -14,10 +14,8 @@
                <p><b>Responsável: João Carlos</b></p>
                <% for membresia in project.memberships %>
                   <p><%= membresia.user.name %>
-                  <% for roles in membresia.roles %>
-                     <% for papel in roles.role %>
-                        <%= papel.id %> - <%= papel.name %>
-                     <% end %>
+                  <% for role in membresia.roles %>
+                     <%= papel.id %> - <%= papel.name %>
                   <% end %>
                   </p>
                <% end %>
