--- a/app/views/analista/index_analista.html.erb
+++ b/app/views/analista/index_analista.html.erb
@@ -13,7 +13,11 @@
                <div class="box-description"><span class="badge bg-danger">Coleta atrasada</span></div>
                <p><b>Responsável: João Carlos</b></p>
                <% for membresia in project.memberships %>
-                  
+                  <% for membros in membresia.members %>
+                     <% for membro in membros %>
+                        <%= membro.name %>
+                     <% end %>
+                  <% end %>
                   <% for papel in membresia.roles %>
                      <%= papel.id %> - <%= papel.name %>
                   <% end %>
