--- a/app/views/analista/index_analista.html.erb
+++ b/app/views/analista/index_analista.html.erb
@@ -22,7 +22,7 @@
                   </p>
                <% end %>
 
-               <a href="/analista/cliente_analista?id_projeto='<% project.id %>'" class="box-link">ver dados</a>
+               <a href="/analista/cliente_analista?id_projeto=<% project.id %>" class="box-link">ver dados</a>
            </div>
          </div>
 
